@@ -2,6 +2,7 @@ FOF 3.6.0
 ================================================================================
 ~ Drop support for PHP 5.6, 7.0
 ~ Drop support for PHP Joomla! 3.8
+# [LOW] Joomla 4 broke b/c with the Controller's setRedirect
 
 FOF 3.5.4
 ================================================================================
